# bench_helib

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a.out  bench.cpp  build.sh  change_base.cpp  cmake_install.cmake  compile_commands.json  findRMFE.sage  find_param  find_params.cpp  rmfe  rmfe.cpp  tryDataSlot.cpp
fimd/: CMakeLists.txt  Makefile  cmake_install.cmake  fimd.cpp  fimd.h
params/: 257_16384_22.txt  257_4096_8.txt  257_8192_16.txt  31_1261_15.txt
utils/: CMakeLists.txt  Makefile  cmake_install.cmake  common.cpp  common.h  time.cpp  timeUtil.cpp  timeUtil.h
